Bug 374813 - Can't change multiple filenames of remote (ftp or samba) files
Summary: Can't change multiple filenames of remote (ftp or samba) files
Status: RESOLVED FIXED
Alias: None
Product: krusader
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.5.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Krusader Bugs Distribution List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-01-09 14:18 UTC by Rafael Linux User
Modified: 2018-05-06 00:15 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rafael Linux User 2017-01-09 14:18:19 UTC
Even if I create virtual folders (virt:/) I can't do a massive rename of remote files. Can't drag and drop onto krename application the files collected on any virtualized search result.
Comment 1 Alex Bikadorov 2017-01-10 17:06:29 UTC
Git commit 0abf174b96254c19b2fec4fad6e3ac6ae040fda9 by Alexander Bikadorov.
Committed on 10/01/2017 at 16:51.
Pushed by abikadorov into branch 'master'.

FIXED: [ 374813 ] Multi rename with KRename does not work when selecting non-local files/folders (ftp, smb, virt, ...)

M  +13   -6    krusader/krslots.cpp

https://commits.kde.org/krusader/0abf174b96254c19b2fec4fad6e3ac6ae040fda9
Comment 2 Rafael Linux User 2017-01-11 00:22:07 UTC
Thank you for the quick fix.